minor fixes and html for declarations in account profile

--- a/src/app/academy-manager/teacher-academy/teacher-academy.component.html
+++ b/src/app/academy-manager/teacher-academy/teacher-academy.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     
-    <!-- <div>
+    <div>
       <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -55,7 +55,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr **ngFor="let module of modules | async; let i = index;" id="{{i}}">
+          <tr *ngFor="let module of modules | async; let i = index;" id="{{i}}">
             <th scope="row">{{ module.id }}</th>
             <td> {{ module.name }} </td>  
             <td>
@@ -64,7 +64,7 @@
           </tr>
         </tbody>
       </table>   
-    </div> -->
+    </div>
 
     <div id="InfoBox" class="form-inline">
         <div class="float-left" style="width: 500px;">
@@ -104,7 +104,7 @@
 
     </div>
   
-  </div>
+
     
 
     <div>
