Add Formandos to Academy

--- a/src/app/academy-manager/academy-view/academy-view.component.html
+++ b/src/app/academy-manager/academy-view/academy-view.component.html
@@ -153,11 +153,11 @@
     <!-- Modal Add Student -->
     <ng-template #templateAddStudent>
         <div class="modal-body text-center">
-            <form #addModuleForm="ngForm" (ngSubmit)="updateAcademy()">
+            <form #addModuleForm="ngForm" (ngSubmit)="updateAcademy2()">
                 <div class="row">
                     <!-- *ngIf="studentsDropdown$ | async as studentsDropdown" -->
                     <label for="students" style="font-weight: bolder;">Alunos</label>
-                    <ngx-bootstrap-multiselect name="students" [(ngModel)]="academy.studentsIds"
+                    <ngx-bootstrap-multiselect name="students" [(ngModel)]="studentsIds2"
                         [items]="studentsDropdown" [settings]="studentsDropdownSettings">
                     </ngx-bootstrap-multiselect>
                     <button class="btn btn-primary">Adicionar Aluno</button>
