--- a/src/app/academy-manager/admin-academies/admin-academies.component.html
+++ b/src/app/academy-manager/admin-academies/admin-academies.component.html
@@ -121,6 +121,14 @@
         </div>
       </div>
 
+      <div class="form-group row">
+        <label for="status" class="col-sm-3 col-form-label">Status:</label>
+        <div class="col-sm-9">
+          <input #status="ngModel" [(ngModel)]="academyToCreate.status" id="status" name="status"
+            type="text" class="form-control" placeholder="status" >
+        </div>
+      </div>
+
       <div class="row">
         <button type="submit" [disabled]="!addAcademyForm.valid" class="btn btn-primary mx-auto">Criar</button>
       </div>
@@ -207,6 +215,16 @@
           <input #usefulInfoField="ngModel" [(ngModel)]="academyToUpdate.usefulInfo" id="usefulInfo" name="usefulInfo"
             type="text" class="form-control" placeholder="Digite aqui informação útil">
         </div>
+
+        <div class="form-group row">
+          <label for="status" class="col-sm-2 col-form-label">Status:</label>
+          <div class="col-sm-10">
+            <input #statusField="ngModel" [(ngModel)]="academyToUpdate.status" id="status" name="status" type="text"
+              class="form-control" placeholder="">
+          </div>
+        </div>
+
+
 
       </div>
       <div class="row">
