--- a/src/app/academy-manager/account-profile/account-profile.component.html
+++ b/src/app/academy-manager/account-profile/account-profile.component.html
@@ -60,7 +60,7 @@
                     <div> <label style="font-weight: bolder;">Email: </label>
                         <div> {{user.email}}</div>
                     </div>
-                    <label style="font-weight: bolder;">Linkedin:<input [readonly]="!inUpdate"
+                    <label style="font-weight: bolder;"><fa-icon [icon]="faLinkedin" style="color: blue;" size="2x"></fa-icon><input [readonly]="!inUpdate"
                             #linkedInAdressField="ngModel" [(ngModel)]="account.linkedInAdress" id="linkedInAdress"
                             name="linkedInAdress" type="text"
                             [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
@@ -121,7 +121,10 @@
                     <div *ngIf="user?.role === 'USER'">
                         <div class="mt-3" *ngIf="misses$ | async as misses">
 
-                            <div style="font-weight: bolder; font-style: italic; font-size: large;">Faltas:</div>
+                            <div style="font-weight: bolder; font-style: italic; font-size: large;">Faltas: <button *ngIf="inUpdate" class="btn btn-borderless"
+                                (click)="openModal(templateAddMissedDay)">
+                                <fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon>
+                            </button></div>
 
                             <div *ngIf="misses?.length === 0">
                                 <p><i>Sem faltas</i></p>
@@ -156,10 +159,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button *ngIf="inUpdate" class="btn btn-borderless"
-                                (click)="openModal(templateAddMissedDay)">
-                                <fa-icon [icon]="faPlusCircle" size="2x"></fa-icon>
-                            </button>
+                            
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
             <div class="container col-md-12" *ngIf="user?.role === 'USER'">
                 <div class="inline mt-2 text-left">
                     <span style="font-weight: bolder; font-size: larger;"><i> Declarações de Recebimento </i></span>
-                    <button class="btn btn-primary" (click)="openModal(templateAddDeclaration)"><fa-icon [icon]="faPlusCircle" size="2x"></fa-icon></button>
+                    <button class="btn btn-borderless" (click)="openModal(templateAddDeclaration)"><fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon></button>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-12 mt-2 text-left">
