--- a/src/app/academy-manager/admin-academies/admin-academies.component.html
+++ b/src/app/academy-manager/admin-academies/admin-academies.component.html
@@ -5,10 +5,21 @@
       (click)="openModalAddAcademy(templateAddAcademy)">Nova Academia</button>
   </div>
 
+  <!-- Filter Fields -->
+
+  <div class="row ml-2 mb-4">
+    <div class="col-12">
+      <input name="name" #name = "ngModel" type="text" class="form-control" [(ngModel)] = "nameFilter" placeholder="Nome da Academia" (input) = "filterTable()">
+    </div>
+  </div>
+
+  <!-- Table -->
+
   <table class="table table-sm table-striped container mt-3 ml-4 col-12 text-center" style="width: 1100px;">
     <thead class="thead-dark">
       <tr>
-        <th>Nome</th>
+        <th (click)="sortTableByName()">Nome <fa-icon [icon]="faSort"></fa-icon></th>
+        <th (click)="sortTableByStatus()">Estado <fa-icon [icon]="faSort"></fa-icon></th>
         <th>Ver</th>
         <th>Editar</th>
         <th>Eliminar</th>
@@ -17,8 +28,12 @@
     <tbody>
       <tr *ngFor="let academy of academies$ | async; let i = index;" id="{{i}}">
         <td>{{academy.edName}}</td>
+        <td>{{academy.status}}</td>
         <td>
-          <button (click)="openAcademyById(academy.id)" class="btn btn-success">Ver</button>
+          <button (click)="openAcademyById(academy.id)" class="btn-borderless btn-edit">
+            <fa-icon [icon]="faEye"></fa-icon>
+            <!-- <i class="far fa-eye"></i> -->
+          </button>
         </td>
         <td>
           <button (click)="openModalUpdateAcademy(templateUpdateAcademy, academy)" class="btn-borderless btn-edit">
