--- a/src/app/academy-manager/academy-view/academy-view.component.html
+++ b/src/app/academy-manager/academy-view/academy-view.component.html
@@ -130,13 +130,13 @@
                     <input #nameField="ngModel" [(ngModel)]="newModule.name" name="name" id="name" type="text"
                         class="form-control">
                 </div>
-                <div class="row" *ngIf="allThemes$ | async as allThemes">
+<!--                 <div class="row" *ngIf="allThemes$ | async as allThemes">
                     <label for="themes" style="font-weight: bolder;">Temas</label>
                     <ngx-bootstrap-multiselect name="themes" [(ngModel)]="newModule.themes" [items]="themeDropdownList"
                         [settings]="dropdownSettings">
                     </ngx-bootstrap-multiselect>
                     <button class="btn btn-primary" (click)="toggleAddTheme">Novo tema</button>
-                </div>
+                </div> -->
                 <button class="btn btn-primary" type="submit">Criar</button>
 
             </form>
