--- a/src/app/academy-manager/account-profile/account-profile.component.html
+++ b/src/app/academy-manager/account-profile/account-profile.component.html
@@ -179,6 +179,7 @@
                                 <th>Declaração Recebida</th>
                                 <th>Data Recebida</th>
                                 <th>Estado de Verificação</th>
+                                <th>Remover Declaração</th>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let declaration of declarations$ | async; let i=index" id={{i}}>
@@ -211,6 +212,7 @@
                                                 <fa-icon [icon]="faTimesCircle" style="color:red" size="2x"></fa-icon>
                                             </button></p>
                                     </td>
+                                    <td><button (click)="deleteDeclaration(declaration.id)"><fa-icon [icon]="faTrashAlt" size="2x"></fa-icon></button></td>
                                 </tr>
                             </tbody>
                         </table>
