--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -13,15 +13,15 @@
 
     <div id="InfoBox" class="form-inline">
         <div class="float-left" style="width: 400px;">
-         <h5>Cliente: <span class="badge badge-secondary"> client {{ academy.client }} </span></h5>
-        <h5>Data de começo: <span class="badge badge-secondary"> startDate {{ academy.startDate }} </span></h5>
-        <h5>Nome da edição: <span class="badge badge-secondary"> edName {{ academy.edName }} </span></h5>
+         <h5>Cliente: <span class="badge badge-secondary"> {{ academy.client }} </span></h5>
+        <h5>Data de começo: <span class="badge badge-secondary"> {{ academy.startDate }} </span></h5>
+        <h5>Nome da edição: <span class="badge badge-secondary"> {{ academy.edName }} </span></h5>
       </div>
         
       <div class="float-left" style="width: 400px;">
-        <h5>Tipo de academia: <span class="badge badge-secondary"> academyType {{ academy.academyType }} </span></h5>
-        <h5>Data de finalização: <span class="badge badge-secondary"> endDate {{ academy.endDate }} </span></h5>
-        <h5>Status: <span class="badge badge-secondary"> status {{ academy.status }} </span></h5>
+        <h5>Tipo de academia: <span class="badge badge-secondary"> {{ academy.academyType }} </span></h5>
+        <h5>Data de finalização: <span class="badge badge-secondary"> {{ academy.endDate }} </span></h5>
+        <h5>Status: <span class="badge badge-secondary"> {{ academy.status }} </span></h5>
       </div>
 
     </div>
@@ -47,9 +47,9 @@
             </tr>
         </thead>
           <tbody>
-            <tr *ngFor="let module of academy.moduleDTOs">
-            <th scope="row">1</th>
-            <td> TESTE {{module.name}}</td>
+            <tr *ngFor="let module of academy.moduleDTOs; i=index">
+            <th scope="row">{{i}}</th>
+            <td> {{module.name}}</td>
             <td><p *ngFor="let teacher of module.userTeacher">{{teacher.name}}</p> </td>
             </tr> 
           </tbody>
