--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -47,8 +47,8 @@
             </tr>
         </thead>
           <tbody>
-            <tr *ngFor="let module of academy.moduleDTOs; i=index">
-            <th scope="row">{{i}}</th>
+            <tr *ngFor="let module of academy.moduleDTOs; let i=index" id="{{i}}">
+            <th scope="row">{{i+1}}</th>
             <td> {{module.name}}</td>
             <td><p *ngFor="let teacher of module.userTeacher">{{teacher.name}}</p> </td>
             </tr> 
