--- a/src/app/academy-manager/account-profile/account-profile.component.html
+++ b/src/app/academy-manager/account-profile/account-profile.component.html
@@ -212,7 +212,7 @@
                                                 <fa-icon [icon]="faTimesCircle" style="color:red" size="2x"></fa-icon>
                                             </button></p>
                                     </td>
-                                    <td><button (click)="deleteDeclaration(declaration.id)"><fa-icon [icon]="faTrashAlt" size="2x"></fa-icon></button></td>
+                                    <td><button class="btn btn-borderless" (click)="deleteDeclaration(declaration.id)"><fa-icon [icon]="faTrashAlt" size="2x"></fa-icon></button></td>
                                 </tr>
                             </tbody>
                         </table>
