FIxed Class and Misses

--- a/src/app/academy-manager/superuser-classrom/superuser-classrom.component.html
+++ b/src/app/academy-manager/superuser-classrom/superuser-classrom.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mt-2 ml-4 d-flex justify-content-center">
   <div>
-  <div><button type="button" class="btn btn-danger" (click)="changeView()">change view</button></div>
+  <!-- <div><button type="button" class="btn btn-danger" (click)="changeView()">change view</button></div> -->
 
   <!-- <div id="zemanel">
 
