--- a/src/app/academy-manager/admin-students/admin-students.component.html
+++ b/src/app/academy-manager/admin-students/admin-students.component.html
@@ -1,42 +1,47 @@
-<div class="mt-4 ml-4">
+<div class="mt-4 ml-5">
 
-  <h3 class="ml-4 mt-4 mb-3">Formandos</h3>  
+  <h3 class="mt-4 mb-3">Formandos</h3>
 
   <!-- Filter Fields -->
 
-  <div class="row ml-2 mb-4">
-    <div class= col-6>
-      <input name="name" #name = "ngModel" type="text" class="form-control" [(ngModel)] = "nameFilter" placeholder="Nome" (input) = "filterTable()">
+  <div class="row mb-4">
+    <div class=col-6>
+      <input name="name" #name="ngModel" type="text" class="form-control" [(ngModel)]="nameFilter" placeholder="Nome"
+        (input)="filterTable()">
     </div>
-    <ngx-select class=col-6 [items]="allAcademiesNames" name="academy" #academy = "ngModel" [(ngModel)] = "academyFilter" (ngModelChange) = "filterTable()">
+    <ngx-select class=col-6 [items]="allAcademiesNames" name="academy" #academy="ngModel" [(ngModel)]="academyFilter"
+      (ngModelChange)="filterTable()">
     </ngx-select>
   </div>
 
-  <!-- Table -->  
-  <div class="ml-2">
-    <table class="table table-sm table-striped container m-3 col-12 text-center" style="width: 1100px;">
-      <thead class="thead-dark">
-        <tr>
-          <th></th>
-          <th (click) = "sortTableByName()">Nome <fa-icon [icon]="faSort"></fa-icon></th>
-          <th (click) = "sortTableByAcademy()">Academias <fa-icon [icon]="faSort"></fa-icon></th>
-          <th>Perfil</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor = "let student of studentUserAccounts$ | async; let i = index;" id="{{i}}">
-          <td class="text-center"><img alt="" class="rounded-circle" 
-            [src]="student.studentAccount.photoLink === null ? 'https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png' : student.studentAccount.photoLink" width="40"></td>
-          <td>{{student.studentUser.name}}</td>
-          <td>
-            <div *ngFor="let academy of student.academyNames"><p>{{academy}}</p></div>
-          </td>
-          <td>
-            <button (click)="showProfile(student.studentUser.id)" class="btn btn-success">Ver</button> 
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <!-- Table -->
+  <table class="table table-sm table-striped container mt-3 col-12 text-center">
+    <thead class="thead-dark">
+      <tr>
+        <th></th>
+        <th (click)="sortTableByName()">Nome <fa-icon [icon]="faSort"></fa-icon>
+        </th>
+        <th (click)="sortTableByAcademy()">Academias <fa-icon [icon]="faSort"></fa-icon>
+        </th>
+        <th>Perfil</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let student of studentUserAccounts$ | async; let i = index;" id="{{i}}">
+        <td class="text-center"><img alt="" class="rounded-circle"
+            [src]="student.studentAccount.photoLink === null ? 'https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png' : student.studentAccount.photoLink"
+            width="40"></td>
+        <td>{{student.studentUser.name}}</td>
+        <td>
+          <div *ngFor="let academy of student.academyNames">
+            <p>{{academy}}</p>
+          </div>
+        </td>
+        <td>
+          <button (click)="showProfile(student.studentUser.id)" class="btn btn-success">Ver</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 </div>
