--- a/src/app/academy-manager/academy-manager.component.html
+++ b/src/app/academy-manager/academy-manager.component.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-2">
-        <div *ngIf="showAdminSidebar===true" class="sidebar-sticky" style="position: fixed; top: 57px;">
+        <div *ngIf="showAdminSidebar===true" class="sidebar-sticky" style="position: fixed; top: 57px; bottom: 57px;">
             <app-admin-sidebar></app-admin-sidebar>
         </div>
 
-        <div *ngIf="showAdminSidebar===false" class="sidebar-sticky"  style="position: fixed; top: 57px;">
+        <div *ngIf="showAdminSidebar===false" class="sidebar-sticky"  style="position: fixed; top: 57px; bottom: 57px;">
             <app-sidebar></app-sidebar>
         </div>
     </div>
