--- a/src/app/academy-manager/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/academy-manager/admin-sidebar/admin-sidebar.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex flex-column vh-100" style="background-color: grey; width: 220px;">
+<div class="d-flex flex-column" style="background-color: grey; width: 220px; height: 100%;">
 
     <div style="background-color: rgb(59, 59, 59);">
         <h4 class="mt-3 mb-3 ml-5" style="color: white;">Menu</h4>
     </div>
 
-    <ul routerLinkActive = "active" class="nav-item mt-3" style="padding-left: 10px;">
+    <div routerLinkActive = "active" class="nav-item mt-3" style="padding-left: 10px;">
 
             <button routerLink = "admin-academies" id="adminAcademies" class="btn btn-link btn-md mx-1 my-3 " style="color: white;">Gerir Academias</button> 
         <br>
@@ -13,6 +13,6 @@
             <button routerLink = "admin-teachers" id="adminTeachers" class="btn btn-link btn-md mx-1 my-3" style="color: white;"> Gerir Formadores</button> 
         <br>
 
-    </ul>
+    </div>
 
 </div>
